--- a/sass/_generales.scss
+++ b/sass/_generales.scss
@@ -16,7 +16,7 @@ html{
 }
 
 h1{
-    margin-top: 30px;
+    margin-top: 1.875rem;
     margin-bottom: 0;
     font-weight: 900;
     font-size: $responsive_size-xl;
@@ -38,7 +38,7 @@ h3{
 
 p{
     font-family: 'Barlow', sans-serif;
-    font-size: $responsive_size-p;
+    font-size: $responsive_size-paragraph;
     max-width: 100vw;
     text-align: center;
     padding: 0.9375rem 0.625rem;
@@ -61,7 +61,7 @@ a{
     padding: 0.9375rem 1.5625rem;
     border-radius: 0.625rem;
     height: 6.25rem;
-    font-size: $responsive_size-p;
+    font-size: $responsive_size-paragraph;
 
     &:hover{
         color: $blanco;
