--- a/sass/_trabajos.scss
+++ b/sass/_trabajos.scss
@@ -1,5 +1,5 @@
 .trabajos-container{
-    margin-top: 50px;
+    margin-top: 3.125rem;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -10,13 +10,13 @@
         color: $blanco;
         text-align: center;
         font-weight: 900;
-        margin-bottom: 50px;
+        margin-bottom: 3.125rem;
     }
 
     .trabajos{
         display: flex;
         flex-direction: column;
-        gap: 15px;
+        gap: 0.9375rem;
 
         @media only screen and (min-width: 992px) {
             display: flex;
@@ -27,12 +27,12 @@
         }
 
         article{
-            margin: 50px 0px;
-            width: 256px;
-            height: 256px;
+            margin: 3.125rem 0px;
+            width: 16rem;
+            height: 16rem;
             background-color: #2d2d2d;
-            border-radius: 20px;
-            box-shadow: 20px 20px 15px 0 #121212;
+            border-radius: 1.25rem;
+            box-shadow: 1.25rem 1.25rem 0.9375rem 0 #121212;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -44,8 +44,8 @@
             }
 
             @media only screen and (min-width: 768px) {
-                width: 350px;
-                height: 450px;
+                width: 21.875rem;
+                height: 28.125rem;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
@@ -57,8 +57,8 @@
             }
 
             @media only screen and (min-width: 992px) {
-                width: 300px;
-                height: 450px;
+                width: 18.75rem;
+                height: 28.125rem;
                 display: flex;
                 align-items: center;
                 justify-content: space-evenly;
@@ -68,7 +68,7 @@
 
         p{
             display: none;
-            font-size: 15px;
+            font-size: 0.9375rem;
 
             @media only screen and (min-width: 768px) {
                     display: block;
@@ -76,11 +76,11 @@
         }
 
         .trabajos__boton-container{
-            margin-bottom: 50px;
+            margin-bottom: 3.125rem;
         }
 
         a{
-            margin: 20px;
+            margin: 1.25rem;
         }
     }
 }
