--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,15 +4,15 @@ $color_complementario: #2d2d2d;
 $blanco: #fff;
 $negro: #000;
 
-$responsive_size-xxl: clamp(45px, 8vw, 100px);
-$responsive_size-xl: clamp(40px, 8vw, 80px);
-$responsive_size-l: clamp(30px, 6vw, 60px);
-$responsive_size-m: clamp(30px, 4vw, 45px);
-$responsive_size-s: clamp(18px, 1.8vw, 25px);
-$responsive_size-xs: clamp(16px, 10px + 1vw, 22px);
-$responsive_size-p: clamp(14px, 1.6vw , 20px);
-$responsive_size-footer: clamp(13px, 1.6vw , 18px);
-$responsive_size-logo: clamp(15px, 1.6vw , 20px);
-$responsive_size-img-l: clamp(256px, 50vw, 550px);
-$responsive_size-img-m: clamp(256px, 30vw, 350px);
-$responsive_size-img-s: clamp(100px, 20vw, 200px);
+$responsive_size-xxl: clamp(2.8125rem, 8vw, 6.25rem);
+$responsive_size-xl: clamp(2.5rem, 8vw, 5rem);
+$responsive_size-l: clamp(1.875rem, 6vw, 3.75rem);
+$responsive_size-m: clamp(1.875rem, 4vw, 2.8125rem);
+$responsive_size-s: clamp(1.125rem, 1.8vw, 1.5625rem);
+$responsive_size-xs: clamp(1rem, 10px + 1vw, 1.375rem);
+$responsive_size-paragraph: clamp(0.875rem, 1.6vw , 1.25rem);
+$responsive_size-paragraph-s: clamp(0.8125rem, 1.6vw , 1.125rem);
+$responsive_size-logo: clamp(0.9375rem, 1.6vw , 1.25rem);
+$responsive_size-img-l: clamp(16rem, 50vw, 34.375rem);
+$responsive_size-img-m: clamp(16rem, 30vw, 21.875rem);
+$responsive_size-img-s: clamp(6.25rem, 20vw, 12.5rem);
