--- a/sass/_web.scss
+++ b/sass/_web.scss
@@ -11,7 +11,7 @@
 }
 
 .trabajos_web{
-    margin-top: 40px;
+    margin-top: 2.5rem;
 }
 
 .web__video{
@@ -29,12 +29,12 @@
     @media only screen and (min-width: 992px) {
         align-self: flex-end;
         text-align: start;
-        margin-left: 138px;
+        margin-left: 6.625rem;
         }
 
     @media only screen and (min-width: 1024px) {
-        font-size: 45px ;
-        margin-left: 50px;
+        font-size: 2.8125rem ;
+        margin-left: 3.125rem;
         }
 }
 
@@ -44,12 +44,12 @@
     @media only screen and (min-width: 992px) {
         align-self: flex-start ;
         text-align: start;
-        margin-left: 138px;
+        margin-left: 6.625rem;
         }
 
     @media only screen and (min-width: 1024px) {
-        font-size: 24px;
-        margin-left: 40px;
+        font-size: 1.5rem;
+        margin-left: 2.5rem;
         }
 }
 
@@ -62,7 +62,7 @@
                         "video";
 
     @media only screen and (min-width: 992px) {
-        height: 400px;
+        height: 25rem;
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-areas: "titulo video video"
                             "parrafo video video";
@@ -74,7 +74,7 @@
 
     @media only screen and (min-width: 992px) {
             align-self: flex-start;
-            margin-left: 50px;
+            margin-left: 3.125rem;
         }
 }
 
@@ -84,7 +84,7 @@
 
 .web__empresas h3{
     font-size: $responsive_size-l;
-    padding-top: 30px;
+    padding-top: 1.875rem;
 }
 
 .web__logo--container{
