se cambiaron imagenes y se ajustaron los atributos alt de las imagenes

--- a/styles/style.css
+++ b/styles/style.css
@@ -646,7 +646,7 @@ nav li {
   width: 100%;
   max-width: 1240px;
   margin-top: 1.25rem;
-  background-image: url(../img/OhCherry-Background.webp);
+  background-image: url(../img/Background.png);
   background-repeat: no-repeat;
   background-position: right center;
   gap: 3.125rem;
