--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -15,7 +15,7 @@
     justify-content: center;
     @include ancho (100%, 1240px);
     margin-top: 1.25rem;
-    background-image: url(../img/OhCherry-Background.webp);
+    background-image: url(../img/Background.png);
     background-repeat: no-repeat;
     background-position: right center;
     gap: 3.125rem;
